force-app/main/default/objects/Loan__c/fields/Car_Number__c.field-meta.xml
<CustomField>
    <fullName>Car_Number__c</fullName>
    <label>Car Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>