force-app/main/default/objects/Loan__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Mahindra</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>