force-app/main/default/objects/Loan__c/fields/TV_Fridge_AC_Number__c.field-meta.xml
<CustomField>
    <fullName>TV_Fridge_AC_Number__c</fullName>
    <label>TV/Fridge/AC Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>