force-app/main/default/objects/Loan__c/recordTypes/Car_Loan.recordType-meta.xml
<RecordType>
    <fullName>Car_Loan</fullName>
    <active>true</active>
    <label>Car Loan</label>
</RecordType>