force-app/main/default/objects/Loan__c/recordTypes/Consumer_Durables_Loan.recordType-meta.xml
<RecordType>
    <fullName>Consumer_Durables_Loan</fullName>
    <active>true</active>
    <label>Consumer Durables Loan</label>
</RecordType>